# Agentic-Framework

./: README.md
Agentic Framework/: Dockerfile  README.md  pyproject.toml
Agentic Framework/agents/: __init__.py  agent_factory.py  research_agent.py  synthesis_agent.py
Agentic Framework/communication/: __init__.py  communication_handler.py  message_broker.py
Agentic Framework/config/: __init__.py  gemini_config.py  settings.py
Agentic Framework/core/: __init__.py  agent_types.py  base_agent.py  exceptions.py
Agentic Framework/docs/: README.md  architecture.md  examples.md  getting-started.md  testing-guide.md
Agentic Framework/examples/: __init__.py  agent_collaboration_example.py  basic_research_example.py  memory_demo.py
Agentic Framework/memory/: __init__.py  memory_handler.py  memory_store.py
Agentic Framework/tests/: README.md
Agentic Framework/tests/agent_collaboration/: test_agent_collaboration.py
Agentic Framework/tests/agent_communication/: test_agent_communication.py
Agentic Framework/tests/memory_system/: test_memory_features.py  test_memory_features_fixed.py
Agentic Framework/tests/research_agent/: json_output_demo.py  simple_json_demo.py  simple_test.py  test_deep_research.py
Agentic Framework/tests/synthesis_agent/: test_synthesis_agent.py  test_synthesis_simple.py
